[package]
name = "stun-coder"
version = "2.0.0"
authors = ["Ruben Harutyunyan <harutyunyan.ruben@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A STUN protocol encoder and decoder for Rust. The implementation is done according to Session Traversal Utilities for NAT (STUN). STUN extensions specified by the Interactive Connectivity Establishment (ICE) protocol are also supported."
homepage = "https://github.com/Vagr9K/rust-stun-coder"
repository = "https://github.com/Vagr9K/rust-stun-coder"
readme = "README.md"
keywords = ["stun", "nat", "traversal", "ice"]
categories = ["encoding", "network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"
num-derive = "0.3.2"
byteorder = "1.3.4"
thiserror = "1.0.20"
crc = "1.8.1"
hmac = "0.9.0"
rust-crypto = "0.2.36"
stringprep = "0.1.2"
rand = "0.7.3"

[dev-dependencies]
get_if_addrs = "0.5.3"
